Add required field message during input

--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
           var re = /[!@#$£%^&*(),.?"':{}|<>12345678910¬`+\-_=\\~/\[\]]/;
           var specialCharacter = re.test(name);
           if (specialCharacter || name.length < 5) {
+              $(".invalidnamemessage").show("fast");
             $(this).addClass("invalid");
           }
           else {
+               $(".invalidnamemessage").hide("fast");
             $(this).removeClass("invalid");
           }
         });
@@ -139,8 +141,10 @@
           var re = /(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])/;
           var isEmail = re.test(email);
           if (!isEmail || email.length < 6 ) {
+              $(".invalidemailmessage").show("fast");
             $(this).addClass("invalid");
           } else {
+             $(".invalidemailmessage").hide("fast");
             $(this).removeClass("invalid");
           }
         })
@@ -389,6 +393,12 @@
           <p>Feel free to get in touch using the secure form provided, or reach out over LinkedIn or Twitter! </p>
 
           <div class="social-logos">
+            <a href="https://github.com/thorners55" target="_blank"><svg id="Layer_1" data-name="Layer 1"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="#03a090" class="logo" alt="GitHub logo">
+                <path class="cls-1"
+                  d="M61.57,84.19c0-2.33,0-4.66,0-7a10.27,10.27,0,0,0-1.86-5.6c-1.12-1.63-1.11-1.58.94-1.92a38.9,38.9,0,0,0,6.63-1.55c7.79-2.74,11.8-8.42,12.92-16.4a25.76,25.76,0,0,0-.1-9.1,15.87,15.87,0,0,0-3.35-7.16A3,3,0,0,1,76,32.31c1-3.13.44-6.24-.39-9.33-.39-1.43-1.19-1.74-2.61-1.5a27.06,27.06,0,0,0-9.58,4.07,3.6,3.6,0,0,1-3,.53,45.36,45.36,0,0,0-20.76,0,4.25,4.25,0,0,1-3.59-.63,25.1,25.1,0,0,0-9.61-4,1.72,1.72,0,0,0-2.25,1.33,17.81,17.81,0,0,0-.41,9.84,2.25,2.25,0,0,1-.31,2.31c-4.19,4.79-4.61,10.51-3.93,16.45.6,5.24,2.46,9.9,6.65,13.35,3.63,3,8,4.25,12.52,5,.38.06.77.08,1.16.14,1,.16,1.37.53.53,1.45a8,8,0,0,0-1.92,4,2.36,2.36,0,0,1-1.91,2c-5.39,1.51-9.27.6-12.39-4-1.41-2.06-2.93-3.91-5.33-4.83A8.77,8.77,0,0,0,16.86,68c-.7-.09-1.58-.22-1.92.6s.51,1.27,1.08,1.63c2.89,1.76,4.51,4.49,5.86,7.46a10.77,10.77,0,0,0,9,6.46A19.22,19.22,0,0,0,36.51,84c1.28-.21,1.68.24,1.63,1.49-.07,1.94,0,3.89,0,5.83,0,2.71-1.51,3.82-4.13,3a45.52,45.52,0,0,1-14.53-7.93C9.32,78.2,3.15,67.64,1.78,54.69,0,37.42,5.91,23.07,19.42,12.1A47.2,47.2,0,0,1,54.06,1.58a48,48,0,0,1,44,40.9,47.38,47.38,0,0,1-30.36,51c-.67.25-1.34.52-2,.75-2.4.8-4-.24-4-2.76s0-4.88,0-7.32Z" />
+              </svg></a>
+
             <a href="https://dev.to/thorners55" target="_blank"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="#03a090" class="logo">
               <path class="cls-1"
                 d="M29.31,43.2q0,6.86,0,13.72a3.64,3.64,0,0,1-3.87,4c-4.23.05-3.7.47-3.74-3.48,0-2.44,0-4.88,0-7.33,0-3.08,0-6.18,0-9.28,0-1.54.22-1.71,1.76-1.72.6,0,1.22,0,1.83,0A3.73,3.73,0,0,1,29.31,43.2Z" />
@@ -396,10 +406,7 @@
                 d="M50,1.4A48.6,48.6,0,1,0,98.6,50,48.6,48.6,0,0,0,50,1.4ZM34.8,58.57a8.78,8.78,0,0,1-8.71,8c-2.88.09-5.76,0-8.65,0-1,0-1.27-.44-1.27-1.35q0-15.25,0-30.52c0-1,.39-1.38,1.39-1.37,2.4,0,4.81.06,7.21,0C31,33.28,34.93,37,35,43.38c0,2.23,0,4.45,0,7.24C34.88,52.89,35.17,55.73,34.8,58.57ZM55.26,34.84c-.06,1,0,2,0,3S54.88,39.1,54,39.09c-2.57,0-5.15,0-7.72,0-1.64,0-1.77.13-1.78,1.81s0,3.24,0,4.85c0,1.07.46,1.5,1.49,1.49,1.31,0,2.62,0,3.92,0,1.07,0,1.39.44,1.33,1.42s0,1.92,0,2.88S50.9,52.8,50,52.77c-1.31,0-2.62,0-3.93,0-1.07,0-1.62.37-1.58,1.54.05,1.74,0,3.49,0,5.23,0,1,.43,1.41,1.42,1.41,2.49,0,5,0,7.47,0,1.86,0,1.86,0,1.87,1.92,0,.87,0,1.74,0,2.62s-.29,1.14-1.08,1.14c-3.85,0-7.69,0-11.53,0C40.42,66.51,39,64.84,39,62.42c0-4.14,0-8.29,0-12.44,0-4,0-7.94,0-11.92,0-3.23,1.42-4.66,4.63-4.66,3.4,0,6.8,0,10.21,0C54.92,33.37,55.32,33.78,55.26,34.84Zm28.5-.45C82.16,40.24,80.6,46.1,79,52c-.89,3.34-1.73,6.67-2.64,10a6.3,6.3,0,0,1-3,4.11,3.51,3.51,0,0,1-4.54-.71,9.12,9.12,0,0,1-2.11-3.86C65,54.79,63.19,48.09,61.41,41.39c-.6-2.24-1.13-4.49-1.73-6.73-.25-.9,0-1.32,1-1.27.61,0,1.22,0,1.83,0,3.13,0,3.07,0,3.82,3,1.57,6.22,3.22,12.42,4.84,18.63.09.32.08.81.5.81s.45-.49.53-.81c1.2-4.56,2.38-9.12,3.58-13.67.58-2.25,1.17-4.48,1.73-6.72a1.42,1.42,0,0,1,1.66-1.27c1.26.07,2.53,0,3.8,0C83.64,33.39,84,33.56,83.76,34.39Z" />
             </svg></a>
             
-            <a href="https://github.com/thorners55" target="_blank"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="#03a090" class="logo" alt="GitHub logo">
-              <path class="cls-1"
-                d="M61.57,84.19c0-2.33,0-4.66,0-7a10.27,10.27,0,0,0-1.86-5.6c-1.12-1.63-1.11-1.58.94-1.92a38.9,38.9,0,0,0,6.63-1.55c7.79-2.74,11.8-8.42,12.92-16.4a25.76,25.76,0,0,0-.1-9.1,15.87,15.87,0,0,0-3.35-7.16A3,3,0,0,1,76,32.31c1-3.13.44-6.24-.39-9.33-.39-1.43-1.19-1.74-2.61-1.5a27.06,27.06,0,0,0-9.58,4.07,3.6,3.6,0,0,1-3,.53,45.36,45.36,0,0,0-20.76,0,4.25,4.25,0,0,1-3.59-.63,25.1,25.1,0,0,0-9.61-4,1.72,1.72,0,0,0-2.25,1.33,17.81,17.81,0,0,0-.41,9.84,2.25,2.25,0,0,1-.31,2.31c-4.19,4.79-4.61,10.51-3.93,16.45.6,5.24,2.46,9.9,6.65,13.35,3.63,3,8,4.25,12.52,5,.38.06.77.08,1.16.14,1,.16,1.37.53.53,1.45a8,8,0,0,0-1.92,4,2.36,2.36,0,0,1-1.91,2c-5.39,1.51-9.27.6-12.39-4-1.41-2.06-2.93-3.91-5.33-4.83A8.77,8.77,0,0,0,16.86,68c-.7-.09-1.58-.22-1.92.6s.51,1.27,1.08,1.63c2.89,1.76,4.51,4.49,5.86,7.46a10.77,10.77,0,0,0,9,6.46A19.22,19.22,0,0,0,36.51,84c1.28-.21,1.68.24,1.63,1.49-.07,1.94,0,3.89,0,5.83,0,2.71-1.51,3.82-4.13,3a45.52,45.52,0,0,1-14.53-7.93C9.32,78.2,3.15,67.64,1.78,54.69,0,37.42,5.91,23.07,19.42,12.1A47.2,47.2,0,0,1,54.06,1.58a48,48,0,0,1,44,40.9,47.38,47.38,0,0,1-30.36,51c-.67.25-1.34.52-2,.75-2.4.8-4-.24-4-2.76s0-4.88,0-7.32Z" />
-            </svg></a>
+
             <a href="https://twitter.com/stephaniethorns" target="_blank"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="#03a090" class="logo" alt="Twitter logo">
               <path class="cls-1"
                 d="M50.06,1.39a48.31,48.31,0,0,1,48.54,49C98.54,78.19,75.26,99.2,48.76,98.6a48.61,48.61,0,0,1,1.3-97.21ZM27.25,70.75a31.56,31.56,0,0,0,21.51,3.77C65.49,71.66,75,57.21,75.21,42.92a3.17,3.17,0,0,1,1.35-2.81,13.16,13.16,0,0,0,3.6-4c-1.85.35-3.37,1.28-5.43.92,1.76-1.6,3.46-2.95,4.11-5.32-1.79.65-3.36,1.27-5,1.8a2.33,2.33,0,0,1-2.48-.35c-3.82-3.17-8.07-3.88-12.53-1.56a10.58,10.58,0,0,0-6,11.11c.13,1.47-.48,1.59-1.6,1.46A32.35,32.35,0,0,1,30.49,33.69c-1.07-1.16-1.19-1.14-1.74.39a11.19,11.19,0,0,0,3,12.18c.33.3.93.45.81,1.19a6.41,6.41,0,0,1-3-.62c-1.31-.55-1.6-.07-1.38,1.12a11,11,0,0,0,6.76,8.46c.57.26,1.33.22,1.69.93a4.18,4.18,0,0,1-2.9.5c-1.37-.06-1.57.44-.92,1.54A11,11,0,0,0,41,65c.41.07,1-.09,1.09.5.06.41-.42.61-.72.83a22,22,0,0,1-5.78,2.91A35.88,35.88,0,0,1,27.25,70.75Z" />
