Implement layout grid for media query

--- a/index.html
+++ b/index.html
@@ -235,16 +235,16 @@
           />
 
           <nav>
-            <a href="#about" class="nav-about focused-section-link">ABOUT</a><br />
-            <a href="#skills" class="nav-skills">SKILLS AND EXPERIENCE</a><br />
-            <a href="#projects" class="nav-projects">PROJECTS</a><br />
-            <a href="#blog" class="nav-blog">BLOG</a><br>
+            <a href="#about" class="nav-about focused-section-link">ABOUT</a>
+            <a href="#skills" class="nav-skills">SKILLS AND EXPERIENCE</a>
+            <a href="#projects" class="nav-projects">PROJECTS</a>
+            <a href="#blog" class="nav-blog">BLOG</a>
             <a href="#contact" class="nav-contact">CONTACT</a>
           </nav>
         </div>
       </header>
+      
       <main>
-     
       <div class="bod">
         <div id="about" class="section about">
         <h1> < Stephanie Thornley /> </h1>
