Fix space on right side on responsive

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <title>Stephanie Thornley's Portfolio Site</title>
     <link rel="stylesheet" href="index.css" />
 
@@ -224,7 +225,7 @@
     </script>
   </head>
   <body>
-    <div class="page">
+    <div id="wrapper">
       <header>
         <div class="nav-section">
           <img
@@ -499,11 +500,13 @@
         </section>
         </div>
         </div>
-    </div>
+   
+   
+      </main>
   <footer>
     <p><b>Stephanie Thornley, 2020</b><br>
       Site built using HTML, CSS and jQuery - click here for source code</p>
   </footer>
-  </main>
+</div>
   </body>
 </html>
