Fix grid auto row injection

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         }
       );
 
+
         /* Every time the window is scrolled ... */
         $(window).scroll(function () {
           /* Check the location of each 'section'. If it is more than 1/5th of the screen height from the bottom of the screen, fade in */
@@ -235,14 +236,15 @@
   <body>
     <div id="wrapper">
       <header>
+
         <div class="nav-section">
           <img
             class="photo"
             src="./assets/circle-cropped.png"
             alt="Stephanie sporting a cheesy grin"
-            width="200"
+            width="200
+            "
           />
-
           <nav>
             <a href="#about" class="nav-about focused-section-link">ABOUT</a>
             <a href="#skills" class="nav-skills">SKILLS AND EXPERIENCE</a>
