Fix jumping scroll to top button and responsive display

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   <body>
     <div id="wrapper">
       <header>
-        <div class="side-section">
+        <div id="side-section">
           <img
             class="photo"
             src="./assets/circle-cropped.png"
@@ -762,9 +762,6 @@
         </div>
       </main>
 
-      <button id="scroll-top-button" title="Go to top">
-        <span class="fas fa-arrow-up"></span>
-      </button>
       <footer>
         <p>
           <b>Stephanie Thornley, 2020</b><br />
@@ -773,5 +770,8 @@
         </p>
       </footer>
     </div>
+    <button id="scroll-top-button" title="Go to top">
+      <span class="fas fa-arrow-up"></span>
+    </button>
   </body>
 </html>
