Refactor px to rem to make visually accessible

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             <section>
               <h2>Projects</h2>
               <div class="container">
-                <div class="card">
+                <div class="card shadow-card">
                   <h3>Budding</h3>
                   <ul class="project-tech">
                     <li>JavaScript,</li>
@@ -550,7 +550,7 @@
                         a chart, enabling the tracking of plant growth
                         over time.
                       </p>
-                      <div class="mobile-demo-card">
+                      <div class="mobile-demo-card shadow-card">
                         <h3>Video here</h3>
                       </div>
                     </div>
@@ -563,7 +563,7 @@
                   </div>
                 </div>
 
-                <div class="card">
+                <div class="card shadow-card">
                   <h3>Northcoders News</h3>
                   <ul class="project-tech">
                     <li>JavaScript,</li>
@@ -600,7 +600,7 @@
                       tested RESTful API, also made as part of the
                       Northcoders bootcamp, and hosted with Heroku.
                     </p>
-                    <div class="desktop-demo-card">
+                    <div class="desktop-demo-card shadow-card">
                       <h3>Video here</h3>
                     </div>
                     <div class="project-links">
@@ -748,8 +748,9 @@
                   aria-label="contact form"
                   method="POST"
                   data-netlify="true"
+                  class="shadow-card"
                 >
-                  <h3 class="contact-form-heading">Get in touch!</h3>
+                  <h3 class="contact-form-heading">Get in touch</h3>
 
                   <label id="name-label"
                     >Name
