--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             }
 
             /* Shows underline only on nav link in nav bar corresponding to the section screen is on.
-            When page loads at top, will automatically have "about" link underlined, scroll takes focused class off, then adds it back on upon scroll if this is the focused section */
+          When page loads at top, will automatically have "about" link underlined, scroll takes focused class off, then adds it back on upon scroll if this is the focused section */
             $("nav-about").removeClass("focused-section-link");
             let focusedSection = "." + $(this).attr("id");
             let focusedSectionClass = ".nav-" + $(this).attr("id");
@@ -116,8 +116,8 @@
               $(this).attr("aria-expanded", flipped);
 
               /* Gets the next element (the ul tag) and toggles between hiding or showing the ul, also animates it.
-            Slides up everything EXCEPT the ul tag following the heading clicked on.
-            Sets aria-expanded to false on everything but EXCEPT the button clicked on.*/
+          Slides up everything EXCEPT the ul tag following the heading clicked on.
+          Sets aria-expanded to false on everything but EXCEPT the button clicked on.*/
               var nextElement = $(this).next();
               nextElement.slideToggle();
               $(".info").not(nextElement).slideUp();
@@ -158,9 +158,9 @@
 
         /*----------------CONTACT-------------------*/
         /* FORM INPUTS:
-        Name: During input, if character length of name is less than 5, background of input box goes pink. Shows message telling minimum characters if less than 5 when leave the focus of the box.
-        Email: During input, if email does not match regex or is less than 6 characters, background of input box goes pink. Shows message telling minimum characters and allowed characters if less than 6 when leave the focus of the box.
-        Message: During input, if message does not match character length, background goes pink - changes to yellow when meets min character length */
+      Name: During input, if character length of name is less than 5, background of input box goes pink. Shows message telling minimum characters if less than 5 when leave the focus of the box.
+      Email: During input, if email does not match regex or is less than 6 characters, background of input box goes pink. Shows message telling minimum characters and allowed characters if less than 6 when leave the focus of the box.
+      Message: During input, if message does not match character length, background goes pink - changes to yellow when meets min character length */
         $("#name").on("input", function () {
           var name = $(this).val();
           var re = /[!@#$£%^&*(),.?"':{}|<>12345678910¬`+\-_=\\~/\[\]]/;
@@ -306,7 +306,7 @@
           <div id="about" class="section about">
             <section>
               <h1>
-                <span aria-hidden="true">< </span>
+                <span aria-hidden="true"> < </span>
                 Stephanie Thornley
                 <span aria-hidden="true"> /> </span>
               </h1>
@@ -510,13 +510,13 @@
                   <h3>Budding</h3>
                   <ul class="project-tech">
                     <li>JavaScript,</li>
+                    <li>Node.js,</li>
                     <li>React Native,</li>
                     <li>Expo,</li>
                     <li>PostgreSQL,</li>
                     <li>AWS S3,</li>
-                    <li>CSS,</li>
-                    <li>Node.js,</li>
-                    <li>Express.js</li>
+                    <li>Express.js,</li>
+                    <li>CSS</li>
                   </ul>
                   <p>
                     Budding is an app for measuring and tracking the
@@ -534,31 +534,40 @@
                   </button>
 
                   <div class="hidden-info">
-                    <div id="demo-more-info">
+                    <div id="budding-more-info">
                       <p>
                         The user places markers on the photo at the
-                        bottom of the pot, the top of the pot, and top
-                        of the plant. The app uses the position of
-                        these markers to calculate the distance
-                        between the bottom and top of the pot in
-                        pixels, and create a pixel-to-cm scale using
-                        the real-life pot height. It then uses this
-                        scale to calculate the real-life height of the
-                        plant. Each time a user measures their plant,
-                        it is saved as a snapshot and can be viewed on
-                        the plant page. Measurements are displayed on
-                        a chart, enabling the tracking of plant growth
-                        over time.
+                        bottom of the pot, the top of the pot, and the
+                        top of the plant.<br />
+                        <br />
+                        The app uses the position of these markers to
+                        calculate the distance between the bottom and
+                        top of the pot in pixels, and create a
+                        pixel-to-cm scale using the real-life pot
+                        height.
+                        <br />
+                        <br />
+                        It then uses this scale to calculate the
+                        real-life height of the plant. Each time a
+                        user measures their plant, it is saved as a
+                        snapshot and can be viewed on the plant's
+                        page. Measurements are displayed on a chart,
+                        enabling the tracking of plant growth over
+                        time.
                       </p>
-                      <div class="mobile-demo-card shadow-card">
-                        <h3>Video here</h3>
-                      </div>
+
+                      <video class="mobile-video" muted controls>
+                        <source
+                          src="./assets/budding-muted.mp4"
+                          type="video/mp4"
+                        />
+                      </video>
                     </div>
                     <div class="project-links">
                       <a href="#">Live app</a>
                       <a href="#">Back-end code</a>
                       <a href="#">Front-end code</a>
-                      <a href="#">Group presentation</a>
+                      <a href="#">Demo</a>
                     </div>
                   </div>
                 </div>
@@ -569,15 +578,17 @@
                     <li>JavaScript,</li>
                     <li>React,</li>
                     <li>PostgreSQL,</li>
+                    <li>Node.js,</li>
                     <li>Axios,</li>
                     <li>Jest,</li>
                     <li>CSS</li>
                   </ul>
                   <p>
                     A Reddit-style discussion website with articles
-                    and comments which users can choose a login, up
-                    vote and down vote, browse by topic, and sort by
-                    date or most popular.
+                    and comments. Users can choose a login, view user
+                    profiles, up vote or down vote, browse by topic,
+                    and sort by date, popularity, or number of
+                    comments.
                   </p>
                   <button
                     id="nc-news"
@@ -589,24 +600,39 @@
                   <div class="hidden-info">
                     <p>
                       Made as coursework for the Northcoders bootcamp,
-                      the site is responsive and made with
-                      accessibility in mind, including semantic HTML,
-                      suitable colour contrasts, focus indication,
-                      ARIA labels, and tested using the Chrome Vox
-                      screen reader.
+                      Northcoders News is responsive and accessible.
+                      The site is written in semantic HTML with ARIA
+                      labels, and designed with suitable colour
+                      contrasts and focus indication.
                     </p>
                     <p>
-                      The site is served by a purpose-built, fully
-                      tested RESTful API, also made as part of the
-                      Northcoders bootcamp, and hosted with Heroku.
+                      The site is served by a purpose-built, RESTful
+                      API, and hosted with Heroku. The API has been
+                      fully tested with TDD using Jest, with
+                      appropriate error handling messages when
+                      incorrect paths are followed.
                     </p>
-                    <div class="desktop-demo-card shadow-card">
-                      <h3>Video here</h3>
+                    <div class="desktop-demo-card">
+                      <video class="desktop-video" muted controls>
+                        <source
+                          src="./assets/Northcoders-News.mp4"
+                          type="video/mp4"
+                        />
+                      </video>
                     </div>
                     <div class="project-links">
-                      <a href="#">Live site</a>
-                      <a href="#">Live API</a>
-                      <a href="#">Front-end code</a>
+                      <a
+                        href="https://stephanies-nc-news.netlify.app/"
+                        >Live site</a
+                      >
+                      <a
+                        href="https://stephanies-news.herokuapp.com/api/"
+                        >Live API</a
+                      >
+                      <a
+                        href="https://github.com/thorners55/stephanies-nc-news"
+                        >Front-end code</a
+                      >
                       <a href="#">Back-end code</a>
                     </div>
                   </div>
@@ -849,8 +875,10 @@
       <footer>
         <p>
           <b>Stephanie Thornley, 2020</b><br />
-          Site built using HTML, CSS and jQuery - click here for
-          source code
+          Site built using HTML, CSS and jQuery -
+          <a href="https://github.com/thorners55/portfolio-website"
+            >click here for source code</a
+          >
         </p>
       </footer>
     </div>
