Change video to gif for faster loading time

--- a/index.html
+++ b/index.html
@@ -556,12 +556,11 @@
                         time.
                       </p>
 
-                      <video class="mobile-video" muted controls>
-                        <source
-                          src="./assets/budding-muted.mp4"
-                          type="video/mp4"
-                        />
-                      </video>
+                      <img
+                        src="assets/budding-muted.gif"
+                        alt="gif showing a demonstration of the Budding app"
+                        class="mobile-gif"
+                      />
                     </div>
                     <div class="project-links">
                       <a href="#">Live app</a>
@@ -612,14 +611,13 @@
                       appropriate error handling messages when
                       incorrect paths are followed.
                     </p>
-                    <div class="desktop-demo-card">
-                      <video class="desktop-video" muted controls>
-                        <source
-                          src="./assets/Northcoders-News.mp4"
-                          type="video/mp4"
-                        />
-                      </video>
-                    </div>
+
+                    <img
+                      src="assets/Northcoders-News.gif"
+                      alt="gif showing a demonstration of my Northcoders News site"
+                      class="desktop-gif"
+                    />
+
                     <div class="project-links">
                       <a
                         href="https://stephanies-nc-news.netlify.app/"
